# haskell-efficient-bitstreams

./: .gitignore  .gitmodules  Length.hs  LongestSeq.hs  LongestSeqFuse.hs  LongestSeqStream.hs  LongestSeqVStream.hs  LongestSeqVStream2.hs  LongestSeqVStream3.hs  Main.hs  Makefile  README.md  SumBytes.hs  SumBytesStream.hs  SumBytesVStream.hs  bitstr.cabal  length.c  longest-seq.c  read.c  stack.yaml  sum-bytes.c  sumBytes.hs
