name:                bitstr
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/bitstr#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable bitstr
  hs-source-dirs:      .
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , streaming
                     , streaming-bytestring
                     , bytestring
                     , resourcet
                     , mtl
                     , word8
  ghc-options: -O2 -fforce-recomp -optc "-funroll-loops" -fllvm -optlc-mcpu=native 
  --ghc-options: -O2 -fforce-recomp -optlc-mcpu=native 

executable sum-bytes
  hs-source-dirs:      .
  main-is:             SumBytes.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , streaming
                     , streaming-bytestring
                     , bytestring
                     , resourcet
                     , mtl
                     , word8
  ghc-options: -O2 -fforce-recomp -optc "-funroll-loops" -fllvm -optlc-mcpu=native 
  --ghc-options: -O2 -fforce-recomp -optlc-mcpu=native 
