name:                bitstr
version:             0.1.0.0
-- synopsis:
description:         Files for stackexchange question
homepage:            https://github.com/githubuser/bitstr#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 mcmayer
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable length
    hs-source-dirs:      .
    main-is:             Length.hs
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5
                      , bytestring
                      , word8
    ghc-options: -O2 -fforce-recomp -optc "-funroll-loops" -fasm -optlc-mcpu=native -pgmlo opt-3.9 -pgmlc llc-3.9

executable sum-bytes
    hs-source-dirs:      .
    main-is:             SumBytes.hs
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5
                      , bytestring
                      , word8
    ghc-options: -O2 -fforce-recomp -optc "-funroll-loops" -fasm -threaded -optlc-mcpu=native -pgmlo opt-3.9 -pgmlc llc-3.9
    ghc-prof-options: -fprof-auto

executable sum-bytes-stream
    hs-source-dirs:      .
    main-is:             SumBytesStream.hs
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5
                       , bytestring
                       , word8
                       , streaming
                       , streaming-bytestring
    ghc-options: -O2 -fforce-recomp -optc "-funroll-loops" -fasm -threaded -optlc-mcpu=native -pgmlo opt-3.9 -pgmlc llc-3.9
    ghc-prof-options: -fprof-auto

executable sum-bytes-vstream
    hs-source-dirs:      .
    main-is:             SumBytesVStream.hs
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5
                       , bytestring
                       , word8
                       , mtl
                       , vector
    ghc-options: -O2 -fforce-recomp -optc "-funroll-loops" -fasm -threaded -optlc-mcpu=native -pgmlo opt-3.9 -pgmlc llc-3.9
    ghc-prof-options: -fprof-auto

executable longest-seq
    hs-source-dirs:      .
    main-is:             LongestSeq.hs
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5
                       , bytestring
                       , word8
    ghc-options: -O2 -fforce-recomp -optc "-funroll-loops" -fasm -threaded -optlc-mcpu=native -funbox-strict-fields -pgmlo opt-3.9 -pgmlc llc-3.9
    ghc-prof-options: -fprof-auto

executable longest-seq-stream
    hs-source-dirs:      .
    main-is:             LongestSeqStream.hs
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5
                       , bytestring
                       , word8
                       , streaming
                       , streaming-bytestring
                       , mtl
    ghc-options: -O2 -fforce-recomp -optc "-funroll-loops" -fasm -threaded -optlc-mcpu=native -funbox-strict-fields -pgmlo opt-3.9 -pgmlc llc-3.9
    ghc-prof-options: -fprof-auto

executable longest-seq-vstream
    hs-source-dirs:      .
    main-is:             LongestSeqVStream.hs
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5
                       , bytestring
                       , word8
                       , mtl
                       , vector
                       , transformers
    ghc-options: -O2 -fforce-recomp -optc "-funroll-loops" -fasm -threaded -optlc-mcpu=native -funbox-strict-fields -pgmlo opt-3.9 -pgmlc llc-3.9 -ddump-simpl
    ghc-prof-options: -fprof-auto

executable longest-seq-vstream2
    hs-source-dirs:      .
    main-is:             LongestSeqVStream2.hs
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5
                       , bytestring
                       , word8
                       , mtl
                       , vector
                       , transformers
    ghc-options: -O2 -fforce-recomp -optc "-funroll-loops" -fasm -threaded -optlc-mcpu=native -funbox-strict-fields -pgmlo opt-3.9 -pgmlc llc-3.9 -ddump-simpl
    ghc-prof-options: -fprof-auto

executable longest-seq-fuse
    hs-source-dirs:      .
    main-is:             LongestSeqFuse.hs
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5
                       , bytestring
                       , word8
                       , streaming
                       , streaming-bytestring
                       , mtl
    ghc-options: -O2 -fforce-recomp -optc "-funroll-loops" -fasm -threaded -optlc-mcpu=native -funbox-strict-fields -pgmlo opt-3.9 -pgmlc llc-3.9
    ghc-prof-options: -fprof-auto
